@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         SyslgScnDamn-Blacklist
-version:      0.43
+version:      0.44
 version_from: lib/SyslogScan/Daemon/BlacklistDetector.pm
 installdirs:  site
 requires:
