@@ -1,4 +1,15 @@
 
+= 2007/10/08	0.44
+
+Bugfix in the content matching regular expression: parenthesis
+were misplaced.
+
+Adjust regular expressions:
+	... For security reasons we do not accept messages containing images 
+	... Blocked by policy: blacklisted URL in mail
+	... URL in message blacklisted
+	... MSN/Hotmail changed their blacklist error message
+
 = 2007/08/01	0.43
 
 Bugfix: don't complain about empty callbacks.
